Prevent icons from overlapping with logo

--- a/client/src/app/@theme/components/header/header.component.scss
+++ b/client/src/app/@theme/components/header/header.component.scss
@@ -55,7 +55,7 @@
     }
   }
 
-  @include media-breakpoint-down(is) {
+  @media (max-width: 667px) {
     .control-item {
       display: none;
     }
